--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 }
 
 .site_title {
+    font-family: 'Open Sans', sans-serif;
     color: white;
     font-weight: 800; 
     position: absolute;
@@ -20,6 +21,7 @@
 }
 
 .site_desc {
+    font-family: 'Open Sans', sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -45,10 +47,11 @@
     justify-content: space-around;
     align-items: center;
     gap: 30px;
-    font-family: "brush script mt", cursive;
+    font-family: 'Open Sans', sans-serif;
     font-style: italic;
     font-size:small;
     color: white;
+    letter-spacing: 3px;
 }
 
 .menu {
@@ -67,11 +70,36 @@
 }
 
 .menuItem:hover {
-    background-color:red;
+    background-color:darkgray;
+}
+
+.menuItem:hover a{
+    background-color:darkgray;
+    color: red;
 }
 .menuItem a {
     text-decoration: none;
     color: white;
 }
 
+.mainbox {
+    margin:auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 50%;
+    height: 300px;
+    position: relative;
+}
 
+.mainbox img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    opacity: 0.7;
+    border-radius: 7px;
+}
+
+.mainbox img:hover {
+    scale: 1.05;
+    opacity: 0.3;
+}
