--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
     padding: auto;
     text-decoration: none;
     list-style: none;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: large;
 }
 .logo {
@@ -95,7 +95,7 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
-    opacity: 0.7;
+    opacity: 0.5;
     border-radius: 7px;
 }
 
@@ -103,3 +103,26 @@
     scale: 1.05;
     opacity: 0.3;
 }
+
+.box-title {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    z-index: 1;
+    font-size: 20px;
+    margin:auto;
+    background-color: darkgray;
+    padding: 5px;
+    text-align: center;
+    color: white;
+    border-radius: 7px;
+    letter-spacing: 2px;
+    font-family: 'Open Sans', sans-serif;
+    display: flex;
+    justify-content: space-around;
+}
+
+/* .box-title:hover {
+    scale: 1.05;
+} */
