--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,14 @@
     margin: 0px;
 }
 
-.header_image {
+.header-image {
     position: relative;
     height: 300px;
     background-image: url("../images/header_background_image.jpg");
     background-size: cover;
 }
 
-.site_title {
+.site-title {
     font-family: 'Open Sans', sans-serif;
     color: white;
     font-weight: 800; 
@@ -24,7 +24,7 @@
     transform: translate(-50%, -50%);
 }
 
-.site_desc {
+.site-desc {
     font-family: 'Open Sans', sans-serif;
     position: absolute;
     top: 50%;
@@ -128,16 +128,10 @@
     justify-content: space-around;
 }
 
-/* .box-title:hover {
-    scale: 1.05;
-} */
-
-
-
 .pagination {
     margin-top: 30px;
     display: flex;
-    justify-content: center; /* Öğeleri yatayda ortalar */
+    justify-content: center; 
 }
 
 .pagination a {
@@ -147,56 +141,3 @@
     text-decoration: none;
     
 }
-
-/* If you don't want the footer to be responsive, remove these media queries */
-
-/* @media (max-width: 1000px) {
-
-	.footer-style {
-		font: bold 14px sans-serif;
-	}
-
-	.footer-style .footer-company-name{
-		font-size: 12px;
-	}
-
-	.footer-style form input,
-	.footer-style form textarea{
-		width: 250px;
-	}
-
-	.footer-style form button{
-		padding: 10px 35px;
-	}
-
-}
-
-@media (max-width: 800px) {
-
-	.footer-distributed{
-		padding: 30px;
-	}
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-right{
-		float: none;
-		max-width: 300px;
-		margin: 0 auto;
-	}
-
-	.footer-distributed .footer-left{
-		margin-bottom: 40px;
-	}
-
-	.footer-distributed form{
-		margin-top: 30px;
-	}
-
-	.footer-distributed form{
-		display: block;
-	}
-
-	.footer-distributed form button{
-		float: none;
-	}
-} */
